--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,8 @@
     <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.html5.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.print.min.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <!--[if lt IE 9]>
       <script src="shared/selectize/js/es5-shim.min.js"></script>
       <![endif]-->
@@ -37,6 +39,7 @@
     <script src="static/shared/jquery.loading.min.js"></script>
     <script src="static/shared/bootstrap/js/bootstrap.min.js"></script>
     <script src="static/nav.js"></script>
+    <script src="static/base.js"></script>
 
     <link rel="stylesheet" type="text/css" href="static/shinythemes/css/sandstone.min.css" />
     <link rel="stylesheet" type="text/css" href="static/shared/css/base.css" />
@@ -53,7 +56,7 @@
     {% block content %}{% endblock %}
 
     <footer>
-        <span><a href="https://fullofbeans.nctu.edu.tw/?page_id=333&lang=en">Molecular Bioinformatics Lab</a>, National Yang Ming Chiao Tung University, Taiwan 300, R.O.C.</span>
+        <span><a href="https://fullofbeans.nctu.edu.tw/?page_id=333&lang=en">Molecular Bioinformatics Lab</a>, National Yang Ming Chiao Tung University, Taiwan 300, R.O.C. contact us:{老師email}</span>
     </footer>
 
     <script>
