--- a/templates/nav.html
+++ b/templates/nav.html
@@ -89,7 +89,9 @@
                         </li>
                     </ul>
                 </li>
-                
+                <li {% if path_info == '/upload_data' %} class="active" {% endif %}>
+                    <a href="upload_data">Upload Data</a>
+                </li>
                 <li {% if path_info == '/tutorial' %} class="active" {% endif %}>
                     <a href="tutorial">Tutorial</a>
                 </li>
