--- a/templates/tab1.html
+++ b/templates/tab1.html
@@ -72,7 +72,6 @@
 
                 <div class="tab-content">
                     <div class="tab-pane fade active in">
-
                         <br>
                         <div class="row">
                             <div class="col-sm-12 datatable-box"></div>
@@ -81,120 +80,11 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-sm-12">
-                    <div>
-                        <div id="chart-option" class="shiny-plot-output" style="margin-top: 20px; display:none;">
-                            Color of group high :
-                            <select class="chart-option-color1">
-                                <option value="black">black</option>
-                                <option value="gray">gray</option>
-                                <option value="silver">silver</option>
-                                <option value="red" selected>red</option>
-                                <option value="pink">pink</option>
-                                <option value="orange">orange</option>
-                                <option value="blue">blue</option>
-                                <option value="green">green</option>
-                                <option value="violet">violet</option>
-                            </select>&emsp;
-                            Line width (H):
-                            <select class="chart-option-width1">
-                                <option value="1.0">1.0</option>
-                                <option value="2.0" selected>2.0</option>
-                                <option value="3.0">3.0</option>
-                                <option value="4.0">4.0</option>
-                                <option value="5.0">5.0</option>
-                                <option value="6.0">6.0</option>
-                                <option value="7.0">7.0</option>
-                                <option value="8.0">8.0</option>
-                                <option value="9.0">9.0</option>
-                            </select>&emsp;
-                            Color of group low:
-                            <select class="chart-option-color2">
-                                <option value="black">black</option>
-                                <option value="gray">gray</option>
-                                <option value="silver">silver</option>
-                                <option value="red">red</option>
-                                <option value="pink">pink</option>
-                                <option value="orange">orange</option>
-                                <option value="blue" selected>blue</option>
-                                <option value="green">green</option>
-                                <option value="violet">violet</option>
-                            </select>&emsp;
-                            Line width (L):
-                            <select class="chart-option-width2">
-                                <option value="1.0">1.0</option>
-                                <option value="2.0" selected>2.0</option>
-                                <option value="3.0">3.0</option>
-                                <option value="4.0">4.0</option>
-                                <option value="5.0">5.0</option>
-                                <option value="6.0">6.0</option>
-                                <option value="7.0">7.0</option>
-                                <option value="8.0">8.0</option>
-                                <option value="9.0">9.0</option>
-                            </select>&emsp;
-                            Censors color (H):
-                            <select class="chart-option-marker-color1">
-                                <option value="black" selected>black</option>
-                                <option value="gray">gray</option>
-                                <option value="silver">silver</option>
-                                <option value="red">red</option>
-                                <option value="pink">pink</option>
-                                <option value="orange">orange</option>
-                                <option value="blue">blue</option>
-                                <option value="green">green</option>
-                                <option value="violet">violet</option>
-                            </select>&emsp;
-                            Censors color (L):
-                            <select class="chart-option-marker-color2">
-                                <option value="black" selected>black</option>
-                                <option value="gray">gray</option>
-                                <option value="silver">silver</option>
-                                <option value="red">red</option>
-                                <option value="pink">pink</option>
-                                <option value="orange">orange</option>
-                                <option value="blue">blue</option>
-                                <option value="green">green</option>
-                                <option value="violet">violet</option>
-                            </select>&emsp;
-
-                            <br><br>
-                            Follow up threshold (years):
-                            <select id="chart-time">
-                                <option value="0">-</option>
-                                <option value="3">3</option>
-                                <option value="5">5</option>
-                                <option value="10">10</option>
-                            </select>
-
-                            &emsp;
-                            Kaplan plot for EGFR
-                            <input type="number" id="chart-LP" placeholder="Lower Percentile" min="0" max="100" style="width: 150px;" />
-                            <input type="number" id="chart-HP" placeholder="Upper Percentile" min="0" max="100" style="width: 150px;" />
-
-
-                            <input type="button" value="Submit" onclick="chgChartTime(false)" />
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-12">
-                    <div>
-                        <div id="chart" class="shiny-plot-output" style="width: 100% ; height: 600px"></div>
-                        <div id="chart2" class="shiny-plot-output" style="width: 100% ; height: 600px"></div>
-                        <div id="chart-cox" class="shiny-plot-output" style="width: 100%;"></div>
-                        <div id="chart-cox-option" class="shiny-plot-output" style="width: 100%; margin-bottom: 30px;"></div>
-                        <div id="chart-upload" class="shiny-plot-output" style="width: 100% ; height: 600px"></div>
-                    </div>
-                </div>
-            </div>
+            {% include 'includes/chart-option.html' %}
         </div>
 
         <!-- modal -->
-        <div class="modal fade" id="tbl-browse-modal" role="dialog">
+        <div class="modal fade" id="tbl-browse-modal" role="dialog" style="weight:100%">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -225,136 +115,10 @@
                                 <div class="col-sm-12 datatable-modal-box"></div>
                             </div>
                         </div>
-
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <div>
-                                    <div id="chart-option-browse-modal" class="shiny-plot-output"
-                                        style="margin-top: 20px;">
-                                        Color of group high :
-                                        <select class="chart-option-color1">
-                                            <option value="black">black</option>
-                                            <option value="gray">gray</option>
-                                            <option value="silver">silver</option>
-                                            <option value="red" selected>red</option>
-                                            <option value="pink">pink</option>
-                                            <option value="orange">orange</option>
-                                            <option value="blue">blue</option>
-                                            <option value="green">green</option>
-                                            <option value="violet">violet</option>
-                                        </select>&emsp;
-                                        Line width (H):
-                                        <select class="chart-option-width1">
-                                            <option value="1.0">1.0</option>
-                                            <option value="2.0" selected>2.0</option>
-                                            <option value="3.0">3.0</option>
-                                            <option value="4.0">4.0</option>
-                                            <option value="5.0">5.0</option>
-                                            <option value="6.0">6.0</option>
-                                            <option value="7.0">7.0</option>
-                                            <option value="8.0">8.0</option>
-                                            <option value="9.0">9.0</option>
-                                        </select>&emsp;
-                                        Color of group low:
-                                        <select class="chart-option-color2">
-                                            <option value="black">black</option>
-                                            <option value="gray">gray</option>
-                                            <option value="silver">silver</option>
-                                            <option value="red">red</option>
-                                            <option value="pink">pink</option>
-                                            <option value="orange">orange</option>
-                                            <option value="blue" selected>blue</option>
-                                            <option value="green">green</option>
-                                            <option value="violet">violet</option>
-                                        </select>&emsp;
-                                        Line width (L):
-                                        <select class="chart-option-width2">
-                                            <option value="1.0">1.0</option>
-                                            <option value="2.0" selected>2.0</option>
-                                            <option value="3.0">3.0</option>
-                                            <option value="4.0">4.0</option>
-                                            <option value="5.0">5.0</option>
-                                            <option value="6.0">6.0</option>
-                                            <option value="7.0">7.0</option>
-                                            <option value="8.0">8.0</option>
-                                            <option value="9.0">9.0</option>
-                                        </select>&emsp;
-                                        Censors color (H):
-                                        <select class="chart-option-marker-color1">
-                                            <option value="black" selected>black</option>
-                                            <option value="gray">gray</option>
-                                            <option value="silver">silver</option>
-                                            <option value="red">red</option>
-                                            <option value="pink">pink</option>
-                                            <option value="orange">orange</option>
-                                            <option value="blue">blue</option>
-                                            <option value="green">green</option>
-                                            <option value="violet">violet</option>
-                                        </select>&emsp;
-                                        Censors color (L):
-                                        <select class="chart-option-marker-color2">
-                                            <option value="black" selected>black</option>
-                                            <option value="gray">gray</option>
-                                            <option value="silver">silver</option>
-                                            <option value="red">red</option>
-                                            <option value="pink">pink</option>
-                                            <option value="orange">orange</option>
-                                            <option value="blue">blue</option>
-                                            <option value="green">green</option>
-                                            <option value="violet">violet</option>
-                                        </select>&emsp;
-
-                                        <br><br>
-                                        Follow up threshold (years):
-                                        <select id="chart-modal-time">
-                                            <option value="0">-</option>
-                                            <option value="3">3</option>
-                                            <option value="5">5</option>
-                                            <option value="10">10</option>
-                                        </select>
-
-                                        &emsp;
-                                        Kaplan plot for EGFR
-                                        <input type="number" id="chart-modal-LP" placeholder="Lower Percentile" min="0" max="100" style="width: 150px;" />
-                                        <input type="number" id="chart-modal-HP" placeholder="Upper Percentile" min="0" max="100" style="width: 150px;" />
-            
-                                        <input type="button" value="Submit" onclick="chgChartTime(true)" />
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <div id="chart-browse-modal" class="shiny-plot-output"
-                                    style="width: 100%; height: 600px"></div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <div id="chart-cox-modal" class="shiny-plot-output"
-                                    style="width: 100%;"></div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <div id="table-browse-modal" class="shiny-plot-output"
-                                    style="width: 100%;">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <div id="chart2-browse-modal" class="shiny-plot-output"
-                                    style="width: 100%;">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <div id="chart-modal-upload" class="shiny-plot-output"
-                                    style="width: 100%; height: 600px"></div>
-                            </div>
-                        </div>
+                        
+                        {% include 'includes/chart-option-browse-modal.html' %}
+                        
+                        
                     </div>
                     <div class="modal-footer">
                         <button type="button" data-dismiss="modal" class="btn btn-primary">Close</button>
@@ -444,4 +208,5 @@
     }
 </script>
 <script src="static/tab1.js"></script>
+<script src="static/chart.js"></script>
 {% endblock %}
