--- a/templates/tab2.html
+++ b/templates/tab2.html
@@ -45,7 +45,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-sm-6">
                     <div class="form-group shiny-input-container">
@@ -62,7 +61,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-sm-6 group-option">
                     <div class="form-group shiny-input-container">
@@ -75,7 +73,6 @@
                         </select>
                     </div>
                 </div>
-
                 <div class="col-sm-6 group-option">
                     <div class="form-group shiny-input-container">
                         <label>Group 2:</label>
@@ -88,7 +85,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-sm-2">
                     <div class="form-group shiny-input-container">
@@ -96,7 +92,6 @@
                     </div>
                 </div>
             </div>
-
             <br>
             <div class="row">
                 <ul class="nav nav-tabs nav-sub-tab">
@@ -110,7 +105,6 @@
                         <a href="#" data-value="aft">AFT</a>
                     </li>
                 </ul>
-
                 <div class="tab-content">
                     <div class="tab-pane fade active in">
 
@@ -121,115 +115,9 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="col-sm-12">
-                    <div>
-                        <div id="chart-option" class="shiny-plot-output" style="margin-top: 20px; display:none;">
-                            Color of group1:
-                            <select class="chart-option-color1">
-                                <option value="black">black</option>
-                                <option value="gray">gray</option>
-                                <option value="silver">silver</option>
-                                <option value="red" selected>red</option>
-                                <option value="pink">pink</option>
-                                <option value="orange">orange</option>
-                                <option value="blue">blue</option>
-                                <option value="green">green</option>
-                                <option value="violet">violet</option>
-                            </select>&emsp;
-                            Line width (1):
-                            <select class="chart-option-width1">
-                                <option value="1.0">1.0</option>
-                                <option value="2.0" selected>2.0</option>
-                                <option value="3.0">3.0</option>
-                                <option value="4.0">4.0</option>
-                                <option value="5.0">5.0</option>
-                                <option value="6.0">6.0</option>
-                                <option value="7.0">7.0</option>
-                                <option value="8.0">8.0</option>
-                                <option value="9.0">9.0</option>
-                            </select>&emsp;
-                            Color of group2:
-                            <select class="chart-option-color2">
-                                <option value="black">black</option>
-                                <option value="gray">gray</option>
-                                <option value="silver">silver</option>
-                                <option value="red">red</option>
-                                <option value="pink">pink</option>
-                                <option value="orange">orange</option>
-                                <option value="blue" selected>blue</option>
-                                <option value="green">green</option>
-                                <option value="violet">violet</option>
-                            </select>&emsp;
-                            Line width (2):
-                            <select class="chart-option-width2">
-                                <option value="1.0">1.0</option>
-                                <option value="2.0" selected>2.0</option>
-                                <option value="3.0">3.0</option>
-                                <option value="4.0">4.0</option>
-                                <option value="5.0">5.0</option>
-                                <option value="6.0">6.0</option>
-                                <option value="7.0">7.0</option>
-                                <option value="8.0">8.0</option>
-                                <option value="9.0">9.0</option>
-                            </select>&emsp;
-                            Censors color (1):
-                            <select class="chart-option-marker-color1">
-                                <option value="black" selected>black</option>
-                                <option value="gray">gray</option>
-                                <option value="silver">silver</option>
-                                <option value="red">red</option>
-                                <option value="pink">pink</option>
-                                <option value="orange">orange</option>
-                                <option value="blue">blue</option>
-                                <option value="green">green</option>
-                                <option value="violet">violet</option>
-                            </select>&emsp;
-                            Censors color (2):
-                            <select class="chart-option-marker-color2">
-                                <option value="black" selected>black</option>
-                                <option value="gray">gray</option>
-                                <option value="silver">silver</option>
-                                <option value="red">red</option>
-                                <option value="pink">pink</option>
-                                <option value="orange">orange</option>
-                                <option value="blue">blue</option>
-                                <option value="green">green</option>
-                                <option value="violet">violet</option>
-                            </select>&emsp;
-
-                            <br><br>
-                            Follow up threshold (years):
-                            <select id="chart-time">
-                                <option value="0">-</option>
-                                <option value="3">3</option>
-                                <option value="5">5</option>
-                                <option value="10">10</option>
-                            </select>
-
-                            <input type="button" value="Change" onclick="chgChartTime()" />
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-12">
-                    <div>
-                        <div id="chart" class="shiny-plot-output" style="width: 100%; height: 600px;"></div>
-                        <div id="chart-cox" class="shiny-plot-output" style="width: 100%;"></div>
-                        <div id="chart2" class="shiny-plot-output" style="width: 100%; margin-bottom:30px;"></div>
-                        <div id="chart-upload" class="shiny-plot-output" style="width: 100%; height: 600px;"></div>
-                    </div>
-                </div>
-            </div>
+            {% include 'includes/chart-option.html' %}
         </div>
-
-
     </div> <!-- end container -->
-
 </div>
 
 <script>
@@ -295,5 +183,6 @@
         drop_image_columns: []
     }
 </script>
+<script src="static/chart.js"></script>
 <script src="static/tab2.js"></script>
 {% endblock %}
