--- a/templates/upload_data.html
+++ b/templates/upload_data.html
@@ -11,14 +11,14 @@
             <div class="row col-lg-12" style="font-weight: bold; padding-top: 10px;">
                <label>File :</label>
                <input type="file" id="input-file" name="file" style="display: inline-block;vertical-align: middle;" />
-               <input type="button" value="load col" id="load_col" style="display: inline-block;vertical-align: middle;" />
+               <input type="button" value="Read columns" id="load_col" style="display: inline-block;vertical-align: middle;" />
                <div id="col_select_div" hidden>
-                  <label>survival day col:</label>
+                  <label>survival day column:</label>
                   <select id="day_col" name="day_col"></select>
-                  <label>survival status col:</label>
+                  <label>survival status column:</label>
                   <select id="status_col" name="status_col"></select>
                   <br>
-                  <label>gene expression col:</label>
+                  <label>gene expression column:</label>
                   <div id="gene_expression_div" style="max-height:300px;overflow-y:auto;display: inline-block;vertical-align: middle;"></div>
 
                   <select id="select_a" class="form-control nav-select-gene">
