--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
 
     <link rel="stylesheet" type="text/css" href="static/shinythemes/css/sandstone.min.css" />
     <link rel="stylesheet" type="text/css" href="static/shared/css/base.css" />
-    
+
     <!--
          <title>Upload a file</title>
          <script src="static/__assets__/sockjs-0.3.4.min.js"></script>
@@ -56,7 +56,7 @@
     {% block content %}{% endblock %}
 
     <footer>
-        <span><a href="https://fullofbeans.nctu.edu.tw/?page_id=333&lang=en">Molecular Bioinformatics Lab</a>, National Yang Ming Chiao Tung University, Taiwan 300, R.O.C. contact us:{老師email}</span>
+        <span><a href="https://fullofbeans.nctu.edu.tw/?page_id=333&lang=en">Molecular Bioinformatics Lab</a>, National Yang Ming Chiao Tung University, Taiwan 300, R.O.C. Contact us:<span id="email"></span></span>
     </footer>
 
     <script>
