--- a/templates/includes/chart-option.html
+++ b/templates/includes/chart-option.html
@@ -1,18 +1,18 @@
 <div class="row">
     <div id="chart-option" class="shiny-plot-output col-sm-12" style="margin-top: 20px; display:none;">
-        Color of group 1 :
+        Color of group <label name="group_1">H</label>:
         <select class="chart-option-color1">
-            <option value="black">black</option>
-            <option value="gray">gray</option>
-            <option value="silver">silver</option>
-            <option value="red" selected>red</option>
-            <option value="pink">pink</option>
-            <option value="orange">orange</option>
-            <option value="blue">blue</option>
-            <option value="green">green</option>
-            <option value="violet">violet</option>
+            <option value="black">Black</option>
+            <option value="gray">Gray</option>
+            <option value="silver">Silver</option>
+            <option value="red" selected>Red</option>
+            <option value="pink">Pink</option>
+            <option value="orange">Orange</option>
+            <option value="blue">Blue</option>
+            <option value="green">Green</option>
+            <option value="violet">Violet</option>
         </select>&emsp;
-        Line width (1):
+        Line width (<label name="group_1">H</label>):
         <select class="chart-option-width1">
             <option value="1.0">1.0</option>
             <option value="2.0" selected>2.0</option>
@@ -24,19 +24,19 @@
             <option value="8.0">8.0</option>
             <option value="9.0">9.0</option>
         </select>&emsp;
-        Color of group 2:
+        Color of group <label name="group_2">L</label>:
         <select class="chart-option-color2">
-            <option value="black">black</option>
-            <option value="gray">gray</option>
-            <option value="silver">silver</option>
-            <option value="red">red</option>
-            <option value="pink">pink</option>
-            <option value="orange">orange</option>
-            <option value="blue" selected>blue</option>
-            <option value="green">green</option>
-            <option value="violet">violet</option>
+            <option value="black">Black</option>
+            <option value="gray">Gray</option>
+            <option value="silver">Silver</option>
+            <option value="red">Red</option>
+            <option value="pink">Pink</option>
+            <option value="orange">Orange</option>
+            <option value="blue" selected>Blue</option>
+            <option value="green">Green</option>
+            <option value="violet">Violet</option>
         </select>&emsp;
-        Line width (2):
+        Line width (<label name="group_2">L</label>):
         <select class="chart-option-width2">
             <option value="1.0">1.0</option>
             <option value="2.0" selected>2.0</option>
@@ -48,29 +48,29 @@
             <option value="8.0">8.0</option>
             <option value="9.0">9.0</option>
         </select>&emsp;
-        Censors color (1):
+        Censors color (<label name="group_1">H</label>):
         <select class="chart-option-marker-color1">
-            <option value="black" selected>black</option>
-            <option value="gray">gray</option>
-            <option value="silver">silver</option>
-            <option value="red">red</option>
-            <option value="pink">pink</option>
-            <option value="orange">orange</option>
-            <option value="blue">blue</option>
-            <option value="green">green</option>
-            <option value="violet">violet</option>
+            <option value="black" selected>Black</option>
+            <option value="gray">Gray</option>
+            <option value="silver">Silver</option>
+            <option value="red">Red</option>
+            <option value="pink">Pink</option>
+            <option value="orange">Orange</option>
+            <option value="blue">Blue</option>
+            <option value="green">Green</option>
+            <option value="violet">Violet</option>
         </select>&emsp;
-        Censors color (2):
+        Censors color (<label name="group_2">L</label>):
         <select class="chart-option-marker-color2">
-            <option value="black" selected>black</option>
-            <option value="gray">gray</option>
-            <option value="silver">silver</option>
-            <option value="red">red</option>
-            <option value="pink">pink</option>
-            <option value="orange">orange</option>
-            <option value="blue">blue</option>
-            <option value="green">green</option>
-            <option value="violet">violet</option>
+            <option value="black" selected>Black</option>
+            <option value="gray">Gray</option>
+            <option value="silver">Silver</option>
+            <option value="red">Red</option>
+            <option value="pink">Pink</option>
+            <option value="orange">Orange</option>
+            <option value="blue">Blue</option>
+            <option value="green">Green</option>
+            <option value="violet">Violet</option>
         </select>&emsp;
         <br><br>
         Follow up threshold (years):
@@ -81,17 +81,17 @@
             <option value="10">10</option>
         </select>
         &emsp;
-        Kaplan plot for EGFR:
+        Split patients by:
         <select class="chart-option-cutoff">
-            <option value="upper Quartile">upper Quartile</option>
-            <option value="upper Tertile">upper Tertile</option>
-            <option value="Median" selected>Median</option>
-            <option value="lower Tertile">lower Tertile</option>
-            <option value="lower Quartile">lower Quartile</option>
-            <option value="Auto">Auto</option>
-            <option value="Tertile">Tertile</option>
-            <option value="Quartile">Quartile</option>
-            <option value="Manual">Manual</option>
+            <option value="upper quartile">Upper Quartile</option>
+            <option value="upper tertile">Upper Tertile</option>
+            <option value="median" selected>Median</option>
+            <option value="lower tertile">Lower Tertile</option>
+            <option value="lower quartile">Lower Quartile</option>
+            <option value="auto">Auto</option>
+            <option value="tertile">Tertile</option>
+            <option value="quartile">Quartile</option>
+            <option value="manual">Manual</option>
         </select>
         
         <script>
@@ -101,31 +101,31 @@
                 lp.attr('disabled', true);
                 hp.attr('disabled', true);
                 switch (this.value) {
-                    case 'upper Quartile':
+                    case 'upper quartile':
                         lp.val(75);
                         hp.val(25);
                         break;
-                    case 'upper Tertile':
+                    case 'upper tertile':
                         lp.val(67);
                         hp.val(33);
                         break;
-                    case 'Median':
+                    case 'median':
                         lp.val(50);
                         hp.val(50);
                         break;
-                    case 'lower Tertile':
+                    case 'lower tertile':
                         lp.val(33);
                         hp.val(67);
                         break;
-                    case 'lower Quartile':
+                    case 'lower quartile':
                         lp.val(25);
                         hp.val(75);
                         break;
-                    case 'Tertile':
+                    case 'tertile':
                         lp.val(33);
                         hp.val(33);
                         break;
-                    case 'Quartile':
+                    case 'quartile':
                         lp.val(25);
                         hp.val(25);
                         break;
@@ -133,7 +133,7 @@
                         lp.val("");
                         hp.val("");
                         break;
-                    case 'Manual':
+                    case 'manual':
                         lp.attr('disabled', false);
                         hp.attr('disabled', false);
                         break;
@@ -141,8 +141,8 @@
             });
         </script>
 
-        <input type="number" id="chart-LP" name="chart-LP" placeholder="Lower Percentile" min="0" max="100" style="width: 150px;" value="50" disabled/>
         <input type="number" id="chart-HP" name="chart-HP" placeholder="Upper Percentile" min="0" max="100" style="width: 150px;" value="50" disabled/>
+        <input type="number" id="chart-LP" name="chart-LP" placeholder="Lower Percentile" min="0" max="100" style="width: 150px;" value="50" disabled/>
         
         <input type="button" value="Submit" name="chgChartTime" onclick="chgChartTime(false)" />
     </div>
@@ -151,9 +151,9 @@
 <div class="row">
     <div class="col-sm-12">
         <div name="height_width_div" class="shiny-plot-output">
-            height:
+            Plot height:
             <input type="number" id="chart_height" name="chart_height" min="0" />
-            width:
+            Plot width:
             <input type="number" id="chart_width" name="chart_width" min="0" />
             <input type="button" value="Download PDF" onclick="downloadPdf(false)" />
         </div>
