--- a/templates/upload_data.html
+++ b/templates/upload_data.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
+{% block style %}
 
+{% endblock %}
 {% block content %}
 <div id="main_structure">
 
@@ -8,24 +10,31 @@
    <div class="container">
       <form id="myForm">
          <div class="row">
-            <div class="row col-lg-12" style="font-weight: bold; padding-top: 10px;">
-               <label>File :</label>
-               <input type="file" id="input-file" name="file" style="display: inline-block;vertical-align: middle;" />
-               <input type="button" value="Read columns" id="load_col" style="display: inline-block;vertical-align: middle;" />
+            <div class="row col-lg-12" style="padding-top: 10px;">
+               <div>
+                  <label class="title">File :</label>
+                  <input type="file" id="input-file" name="file" style="display: inline-block;vertical-align: middle;" />
+                  <input type="button" value="Load" id="load_col" class="btn btn-default action-button type-btn" style="display: inline-block;vertical-align: middle; padding: 4px 12px" />
+               </div>
+               <br>
                <div id="col_select_div" hidden>
-                  <label>survival day column:</label>
+                  <label class="title">Survival day at:</label>
                   <select id="day_col" name="day_col"></select>
-                  <label>survival status column:</label>
+                  &nbsp;&nbsp;
+                  <label class="title">Survival status at:</label>
                   <select id="status_col" name="status_col"></select>
                   <br>
-                  <label>gene expression column:</label>
-                  <div id="gene_expression_div" style="max-height:300px;overflow-y:auto;display: inline-block;vertical-align: middle;"></div>
-
                   <select id="select_a" class="form-control nav-select-gene">
                      <option value="logrank">Log Rank</option>
                      <option value="cox">Cox</option>
                      <option value="aft">AFT</option>
                   </select>
+                  <br>
+                  <br>
+                  <label class="title">Select column(s) to analyze:</label>
+                  <br>
+                  <div id="gene_expression_logrank_div" style="max-height:300px;overflow-y:auto;display: inline-block;vertical-align: middle;"></div>
+                  <div id="gene_expression_coxaft_div" style="max-height:300px;overflow-y:auto;display: inline-block;vertical-align: middle;"></div>
                </div>
             </div>
          </div>
@@ -36,6 +45,7 @@
             </div>
          </div>
       </form>
+      <hr>
       {% include 'includes/chart-option.html' %}
      </div>
    </div>
