--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
             <li>Gene expression level in normal and tumor samples</li>
             <li>CpG site & mRNA correlation in cancer</li>
             <li><span style="font-weight:bold; color:#0080FF;">Combined Effects, allow users to observe the relationship between multiple genes and survival, which is an innovative method by DoSurvival.</span></li>
+            <li><span style="font-weight:bold;">'Analyze your data', allows users to perform univariate/multivariant survival analysis with </span><span style="font-weight:bold; color:#0080FF;">Log-rank test, Cox proportional hazard model or Accelerated Failure-Time model.</span></li>
          </ol>
 
          <div>DoSurvive provides multiple different entry points for users with different needs. The following cancer types are included in DoSurvive: Adrenocortical carcinoma (ACC), Bladder
