--- a/templates/nav.html
+++ b/templates/nav.html
@@ -90,7 +90,9 @@
                     </ul>
                 </li>
                 <li {% if path_info == '/upload_data' %} class="active" {% endif %}>
-                    <a href="upload_data">Upload Data</a>
+                    <a href="upload_data">
+                        Analyze your data 
+                    </a>
                 </li>
                 <li {% if path_info == '/tutorial' %} class="active" {% endif %}>
                     <a href="tutorial">Tutorial</a>
