--- a/python_nctu_cancer/static/shared/css/base.css
+++ b/python_nctu_cancer/static/shared/css/base.css
@@ -1,7 +1,21 @@
 
 .title {
     color: rgb(160, 194, 55);
-    /* color: #98978b; */
+}
+
+.step {
+    font-size: large;
+}
+
+.selectContainer{
+    max-height:300px;
+    overflow-y:auto;
+    vertical-align: middle;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border: 1px solid #3e3f3a; /* 框線 */
+    border-radius: 5px; /* 圓角半徑 */
 }
 
 .fontNoBold {
