--- a/templates/includes/chart-option-browse-modal.html
+++ b/templates/includes/chart-option-browse-modal.html
@@ -88,7 +88,7 @@
             <option value="median" selected>Median</option>
             <option value="lower tertile">Lower Tertile</option>
             <option value="lower quartile">Lower Quartile</option>
-            <option value="auto">Auto</option>
+            <option value="best cutoff">Best cutoff</option>
             <option value="tertile">Tertile</option>
             <option value="quartile">Quartile</option>
             <option value="manual">Manual</option>
@@ -129,7 +129,7 @@
                         lp.val(25);
                         hp.val(25);
                         break;
-                    case 'Auto':
+                    case 'best cutoff':
                         lp.val("");
                         hp.val("");
                         break;
