--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
          <ol>
             <li>Gene expression in cancers and survival analysis correlation</li>
             <li><span style="color:#0080FF;">Log-rank test</span> of different molecular types in specific cancers</li>
-            <li><span style="color:#0080FF;">Cox proportional hazard model</span> model results of different molecular types in specific cancers</li>
+            <li><span style="color:#0080FF;">Cox proportional hazard model</span> results of different molecular types in specific cancers</li>
             <li><span style="color:#0080FF;">Accelerated Failure-Time model (AFT)</span> results of different molecular types in specific cancers</li>
             <li>Gene expression level in normal and tumor samples</li>
             <li>CpG site & mRNA correlation in cancer</li>
@@ -39,7 +39,7 @@
             (STAD), Testicular Germ Cell Tumors (TGCT), Thyroid carcinoma (THCA), Thymoma (THYM), Uterine
             Corpus Endometrial Carcinoma (UCEC), Uterine Carcinosarcoma (UCS), Uveal Melanoma (UVM).</div>
          <br>
-         <div>New users are advised to read our <a
+         <div>New users are advised to read our<a
                onclick="javascript:location.href='/tutorial'"
                style="color:#0080FF; text-decoration: underline; cursor: pointer;">tutorial</a> before
             using DoSurvive.</div>
